--- a/p/pr/pro/productreportcard.com.html
+++ b/p/pr/pro/productreportcard.com.html
@@ -1,14 +1,14 @@
-<!--The following is the downloaded HTML source of the productreportcard.com privacy policy that was archived on 2013-09-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130908145408id_/http%3A//www.productreportcard.com/privacy.cgi) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the productreportcard.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214111309id_/http%3A//www.productreportcard.com/privacy.cgi) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<title>Product Report Card Privacy Policy</title>
 	<meta name="description" content="We take your privacy very seriously, and we've created this Privacy Policy in order to demonstrate our firm commitment to online privacy.">
 	<link rel="shortcut icon" href="/favicon.ico">
-	<link href="/css/styles_global.css?v=07.10.13" rel="stylesheet" type="text/css" media="screen">
-	<link href="/css/styles_annex.css?v=06.12.13" rel="stylesheet" type="text/css" media="screen">
-	<link href="/css/menu.css?v=06.12.13" rel="stylesheet" type="text/css" media="screen">
+	<link href="/css/styles_global.css?v=02.05.14" rel="stylesheet" type="text/css" media="screen">
+	<link href="/css/styles_annex.css?v=01.21.14" rel="stylesheet" type="text/css" media="screen">
+	<link href="/css/menu.css?v=01.21.14" rel="stylesheet" type="text/css" media="screen">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=4.0">
 	<link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="/css/styles_mobile.css">
 	<link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="/css/menu_mobile.css">
@@ -86,7 +86,7 @@
 	a.setAttribute('id','_vis_opt_path_hides');a.setAttribute('type','text/css');if(a.styleSheet)a.styleSheet.cssText=b;else 
 	a.appendChild(d.createTextNode(b));h.appendChild(a);return settings_timer;}};}());_vwo_settings_timer=_vwo_code.init();
 	//]]>
-	</script><script src="//dev.visualwebsiteoptimizer.com/j.php?a=30459&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20130908145408id_%2Fhttp%253A%2F%2Fwww.productreportcard.com%2Fprivacy.cgi&amp;r=0.8561089247008806" type="text/javascript"></script>
+	</script><script src="//dev.visualwebsiteoptimizer.com/j.php?a=30459&amp;u=https%3A%2F%2Fweb.archive.org%2Fweb%2F20140214111309id_%2Fhttp%253A%2F%2Fwww.productreportcard.com%2Fprivacy.cgi&amp;r=0.7190165424227573" type="text/javascript"></script>
 	<!-- End Visual Website Optimizer Asynchronous Code -->
 
 </head>
@@ -128,7 +128,7 @@ var WRInitTime=(new Date()).getTime();
 
 		<div id="rightNav">
 			<div id="logIn">
-<a href="/register.cgi">Sign Up</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/login.cgi">Login</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://productreportcard.kayako.com">Help</a>
+<a href="/register.cgi">Sign Up</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/login">Login</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://productreportcard.kayako.com">Help</a>
 			</div>
 		</div>
 		<div id="searchSite">
@@ -160,10 +160,6 @@ var WRInitTime=(new Date()).getTime();
           <div class="heading">&nbsp;<br>ProductReportCard.com Privacy Policy</div>
 					
 <p>ProductReportCard.com takes your privacy seriously, and has created this Privacy Policy in order to demonstrate our firm commitment to online privacy. Keep reading to learn more about our information gathering and dissemination practices, and our use of personally identifiable information while on our Web site <a href="http://www.productreportcard.com">www.productreportcard.com</a> ("The site" "ProductReportCard.com", "we", "us").</p>
-
-<p>ProductReportCard.com has been awarded TRUSTe's Privacy Seal signifying that this privacy policy and practices have been reviewed by TRUSTe for compliance with <a href="http://www.truste.com/privacy_seals_and_services/consumer_privacy/privacy-programs-requirements.html" target="_blank">TRUSTe's program requirements</a> including transparency, accountability and choice regarding the collection and use of your personal information.  The TRUSTe program does not cover information that may be collected through downloadable software.   TRUSTe's mission, as an independent third party, is to accelerate online trust among consumers and organizations globally through its leading privacy trustmark and innovative trust solutions. If you have questions or complaints regarding our privacy policy or practices, please contact us at support@productreportcard.com.  If you are not satisfied with our response you can contact <a href="http://watchdog.truste.com/pvr.php?page=complaint" target="_blank">TRUSTe here</a>.</p>
-
-<p>ProductReportCard.com complies with the U.S. - E.U. Safe Harbor framework and the U.S. - Swiss Safe Harbor framework as set forth by the U.S. Department of Commerce regarding the collection, use, and retention of personal data from European Union member countries and Switzerland. ProductReportCard.com has certified that it adheres to the Safe Harbor Privacy Principles of notice, choice, onward transfer, security, data integrity, access, and enforcement.  To learn more about the Safe Harbor program, and to view ProductReportCard.com's certification, please visit <a href="http://www.export.gov/safeharbor/" target="_blank">http://www.export.gov/safeharbor/</a></p>
 
 <p><b>What information does ProductReportCard.com collect from visitors?</b></p>
 
@@ -277,9 +273,9 @@ We may also use pixel tags provided by 3rd-parties, and limit the collection of 
 	<div style="clear:both;"></div>
 	<div id="footer" class="clearfix">
         <div id="secNav">
-<a href="http://www.productreportcard.com/about-us" style="font-size:11px;">About Us</a>&nbsp;&nbsp;|&nbsp;<a href="http://www.productreportcard.com/terms.cgi" style="font-size:11px;">Terms of Use</a>&nbsp;&nbsp;|&nbsp;<a href="http://www.productreportcard.com/disclaimer.cgi" style="font-size:11px;">Disclaimer</a>&nbsp;&nbsp;|&nbsp;<a href="http://www.productreportcard.com/privacy.cgi" style="font-size:11px;">Privacy Policy</a>&nbsp;&nbsp;|&nbsp;<a href="http://productreportcard.kayako.com" style="font-size:11px;">Support Desk</a>    </div>
+<a href="http://www.productreportcard.com/about-us" style="font-size:11px;">About Us</a>&nbsp;&nbsp;|&nbsp;<a href="http://www.productreportcard.com/terms.cgi" style="font-size:11px;">Terms of Use</a>&nbsp;&nbsp;|&nbsp;<a href="http://www.productreportcard.com/disclaimer.cgi" style="font-size:11px;">Disclaimer</a>&nbsp;&nbsp;|&nbsp;<a href="http://www.productreportcard.com/privacy.cgi" style="font-size:11px;">Privacy Policy</a>&nbsp;&nbsp;|&nbsp;<a href="http://affiliates.productreportcard.com/PublisherApplication.aspx" style="font-size:11px;">Affiliate Program</a>&nbsp;&nbsp;|&nbsp;<a href="http://productreportcard.kayako.com" style="font-size:11px;">Support Desk</a>    </div>
 
-    <div id="copy">Copyright © 2013 ProductReportCard.com, LLC. All rights reserved.</div>
+    <div id="copy">Copyright © 2014 ProductReportCard.com, LLC. All rights reserved.</div>
     <div id="contentwriter">Reviews, ratings, and buying guides written by <a href="https://plus.google.com/u/0/118069610836241773608">Mary Griffin</a> and her team.</div>
     <div id="copyspace">
       <img src="/images/copyscape.png" alt="Copyscape - Do Not Copy" width="234" height="16">
