--- a/h/ho/hon/hondafinancialservices.com.html
+++ b/h/ho/hon/hondafinancialservices.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the hondafinancialservices.com privacy policy that was archived on 2013-08-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130809095615id_/http%3A//www.hondafinancialservices.com/help/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hondafinancialservices.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214113820id_/http%3A//www.hondafinancialservices.com/help/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 
 
     <!--
-.54
-8/9/2013 2:56:16 AM PDT
+.98
+2/14/2014 3:37:15 AM PST
 http://www.hondafinancialservices.com:80/help/privacy-policy
 Release: 04202011
 //-->
@@ -22,7 +22,7 @@ Release: 04202011
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <!--[if IE]><![endif]-->
     <link rel="stylesheet" type="text/css" href="/combres.axd/coreCss/986228693/">
-    <link rel="stylesheet" type="text/css" href="/combres.axd/skinCss/-474888065/">
+    <link rel="stylesheet" type="text/css" href="/combres.axd/skinCss/1065941011/">
     <link rel="stylesheet" type="text/css" href="/combres.axd/printCss/517041840/" media="print">
     <link rel="stylesheet" type="text/css" href="/combres.axd/help-privacy-policyCss/-549002482/">
 	
@@ -45,8 +45,7 @@ Release: 04202011
                     
                     <li class="first"><a id="link-nav-register" class="link-register" href="/Registration/reg-step-one-disclaimer">
                         <span>Register</span></a></li>
-                    <li class="last"><a id="link-nav-login" class="link-login" href="#" rel="#mod-nav-login">
-                        <span>Log In</span></a>
+                    <li class="last"><a id="link-nav-login" class="link-login" href="#" rel="#mod-nav-login"><span>Log In</span></a>
                         <div id="mod-nav-login" class="modal modal-2">
                             <a class="link link-close" href="#"><span>close</span></a>
                             <h3>
@@ -309,9 +308,9 @@ Release: 04202011
 			<div class="privacy-policy">
 				                <!--Published From Documentum Template-->
 <!--Updated /Published : -->
-<!--Tue Feb 19 08:36:04 PST 2013--><br><br><table width="90%" cellspacing="0" cellpadding="0" border="0" align="center">
+<!--Fri Dec 20 11:12:49 PST 2013--><br><br><table width="90%" cellspacing="0" cellpadding="0" border="0" align="center">
     <tbody><tr>
-        <td class="bodyText" align="center"><b>STATEMENT OF PRIVACY (UNITED STATES ONLY)</b></td>
+        <td class="bodyText" align="center"><b>STATEMENT OF PRIVACY ( 9/20/2013,  UNITED STATES ONLY)</b></td>
     </tr>
     <tr>
         <td class="bodyText">
@@ -330,6 +329,7 @@ Release: 04202011
             <p>"Personally identifiable information or personal information" refers to any information that identifies or can be used to contact or locate you such as name, mailing address, phone number, email address, social security number, and account number. &nbsp;Use of certain features and tools on this Site requires that you provide us with personally identifiable information. &nbsp;However, you always have the option not to provide personal information by choosing not to use a particular feature. &nbsp;</p>
             <p>We may request personally identifiable information in order to enhance your experience on our web sites. &nbsp;There are instances where American Honda requests personally identifiable information to provide the web site visitor a service or correspondence (such as promotions and mailed brochures). This information, such as name, mailing address, email address, type of request and possibly additional information, is collected and stored in a manner appropriate to the nature of the data and is used to fulfill your request. The information you provide is used by American Honda to improve the services we provide you and to help us promote products and services that are of most interest to you. &nbsp;The information may be merged with other information American Honda already knows, such as whether you are an owner of a Honda or Acura vehicle.</p>
             <p>To use American Honda's Internet services, such as the Dealer Locator and brochure requests, we require a certain amount of personally identifying information such as name and address to meet your request. &nbsp;We may use this information to identify and access data in the existing relationship we have with you to provide you with the requested services. &nbsp;We may request email addresses as an alternate means of contacting you.</p>
+            <p>Our websites may not recognize browser based do not track signals.</p>
             <p>
                 <span style=" color: #ff0000;">We collect and use anonymous information</span>
             </p>
@@ -345,7 +345,7 @@ Release: 04202011
             <p>
                 <span style=" color: #ff0000;">Information use</span>
             </p>
-            <p>The information you share with American Honda is used to improve the services we provide you and to provide services to you that you request. &nbsp;For example, if you enroll in EasyPay or Pay Online, our account payment services, we will be required to validate your bank account information with your bank. &nbsp;If you request brochures, we may hire a third party fulfillment company to meet your request. &nbsp;We may share information about you with third party service providers (such as companies who assist us in conducting surveys and research to help us provide better products and services). &nbsp;However, your information is not shared with or sold to any other third party entity or individual for that entity or individual's independent use with the exception of when you request to be added to the fan mailing list of one of the participating Civic Tour bands and/or Civic Tour promotional partners or in situations where required by law, we may need share this information with law enforcement officials such as in response to a court order or subpoena. &nbsp;American Honda Finance Corporation ("AHFC") customers are also encouraged to see the AHFC Financial Privacy Policy below to learn more about our protections and use of your nonpublic personal information (such as personally identifiable financial information). &nbsp;</p>
+            <p>The information you share with American Honda is used to improve the services we provide you and to provide services to you that you request. &nbsp;For example, if you enroll in EasyPay or Pay Online, our account payment services, we will be required to validate your bank account information with your bank. &nbsp;If you request brochures, we may hire a third party fulfillment company to meet your request. &nbsp;We may share information about you with third party service providers (such as companies who assist us in conducting surveys and research to help us provide better products and services). &nbsp;However, your information is not shared with or sold to any other third party entity or individual for that entity or individual's independent use with the exception of when you request to be added to the fan mailing list of one of the participating Civic Tour bands and/or Civic Tour promotional partners or in situations where required by law, we may need to&nbsp;share this information with law enforcement officials such as in response to a court order or subpoena. &nbsp;American Honda Finance Corporation ("AHFC") customers are also encouraged to see the AHFC Financial Privacy Policy below to learn more about our protections and use of your nonpublic personal information (such as personally identifiable financial information). &nbsp;</p>
             <p>
                 <span style=" color: #ff0000;">Security</span>
             </p>
@@ -585,8 +585,8 @@ Honda Titling A-D LPs<br>
 American Honda Finance Corporation ("AHFC") respects and protects customer privacy. &nbsp;We know privacy is important to you and is vital to our business. &nbsp;As required by law, this document explains our Privacy Policy. &nbsp;We want you to know how we keep our customer information private and secure and how we use the information to provide you a broad range of financial services and products to serve you better.</p>
             <p>
                 <b>How do we protect information?</b>
-                <br>
-We maintain physical and electronic safeguards as well as policies and procedures that comply with federal regulations and prevent unauthorized access to customer information. &nbsp;In addition, we only permit access to information about you to our employees who need to know that information to provide products or services to you and to service your account.</p>
+            </p>
+            <p>We maintain physical and electronic safeguards and have policies and procedures that are intended to prevent unauthorized access to consumer information.</p>
             <p>
                 <b>AHFC collects information from</b>
             </p>
@@ -605,7 +605,7 @@ We maintain physical and electronic safeguards as well as policies and procedure
             <p>We may also disclose:</p>
             <p>* all of the information (see 1-3, above) that we collect about you as a present or former customer to financial service providers (for example, banks, vendors or service companies that provide statement printing and mailing or other types of services) for your accounts with AHFC, or with the affiliate to which your account may be assigned and for which AHFC provides servicing.</p>
             <p>* information about you to nonaffiliated third parties as permitted or required by law (for example, information provided to credit reporting agencies or in response to a subpoena).</p>
-            <p>If we change our policy on how we handle your information, we will notify you in advance.</p>
+            <p>If we modify our privacy policy on how we handle your personal information, we will post the revised information here, with a revised "effective date" at the top of this privacy policy. If there are material changes to this privacy policy or in how we will use your personal information, we may notify you by other means, such as sending an email to you or by posting a notice of such changes on our website. We encourage you to periodically review this statement to be informed of how we are protecting your information.</p>
             <a href="#top"> BACK TO TOP</a>
             <br>
             <br>
@@ -635,7 +635,7 @@ We maintain physical and electronic safeguards as well as policies and procedure
                     <li><a href="/help/privacy-policy"><span>Privacy Policy</span></a></li>
                     <li><a href="/help/terms-and-conditions"><span>Legal Terms and
                         Conditions</span></a></li>
-                    <li class="last"><span>©2013
+                    <li class="last"><span>©2014
                         American Honda Finance Corporation</span></li>
                 </ul>
             </div>
@@ -742,8 +742,8 @@ We maintain physical and electronic safeguards as well as policies and procedure
 		</a>
 		<p class="topSpace">Your session will timeout in five minutes. Please click <a id="ping" href="#">here</a> to continue working.</p>
 	</div>
-    <script type="text/javascript" src="/combres.axd/coreJs/-52336893/"></script>
-    <script type="text/javascript" src="/combres.axd/skinJs/-1350657351/"></script>
+    <script type="text/javascript" src="/combres.axd/coreJs/47001285/"></script>
+    <script type="text/javascript" src="/combres.axd/skinJs/-327630224/"></script>
     <script type="text/javascript" src="/combres.axd/help-privacy-policyJs/2101909388/"></script>
 
 	
@@ -774,7 +774,7 @@ var s_code = $.omniture.triggerPageLoad(omniData); if (s_code) document.write(s_
 
 <noscript>
 	<div>
-		<img src="http://omt.honda.com/b/ss/ahmhondafinancialservicesprod/5/91836?pageName=PRIVACY+POLICY&amp;ch=HELP&amp;c11=CONTENT&amp;c37=HTTP%3a%2f%2fWWW.HONDAFINANCIALSERVICES.COM%2fHELP%2fPRIVACY-POLICY&amp;v5=" alt=""/>
+		<img src="http://omt.honda.com/b/ss/ahmhondafinancialservicesprod/5/48160?pageName=PRIVACY+POLICY&amp;ch=HELP&amp;c11=CONTENT&amp;c37=HTTP%3a%2f%2fWWW.HONDAFINANCIALSERVICES.COM%2fHELP%2fPRIVACY-POLICY&amp;v5=" alt=""/>
 	</div>
 </noscript><!--/DO NOT REMOVE/-->
 
