--- a/n/ne/nex/nextjobathome.com.html
+++ b/n/ne/nex/nextjobathome.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nextjobathome.com privacy policy that was archived on 2013-11-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131126055315id_/http%3A//nextjobathome.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nextjobathome.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214114933id_/http%3A//nextjobathome.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
@@ -39,8 +39,7 @@
 <p>To be removed from our list, simply <a class="fancybox fancybox.iframe" href="opt-out/opt-out_form.php">click here now</a> or on the unsubscribe links located on any of our emails. You can also reply to an email and request to be removed manually.</p>
 <p><strong>Security</strong></p>
 <p>This website takes every precaution to protect users' information. We cannot guarantee the security of your information against those who use advanced illegal means to breach and or hack our security defenses.</p>
-<p><strong>Notification of Changes to Privacy Policy</strong></p>
-<p>We may update this Privacy Policy at any time by posting a new privacy policy on the Site. Please see our terms of service, use and conditions. We offer a number of services that do not require you to register for an account or provide any personal information to us. In order to provide our full range of services, we may collect the following types of information:</p>
+<p> Please see our terms of service, use and conditions. We offer a number of services that do not require you to register for an account or provide any personal information to us. In order to provide our full range of services, we may collect the following types of information:</p>
 <p> Information you provide - When you sign up for a NGM Account or other NGM service, or offer that requires registration, we ask you for personal information (such as your name, email address and an account password).</p>
 <p> Cookies - When you visit NGM, we may send one or more cookies - a small file containing a string of characters - to your computer or other device that uniquely identifies your browser. We use cookies to improve the quality of our service, including for storing user preferences, improving search results and ad selection, and tracking user trends, such as how people search. NGM may also use cookies in its advertising services to help advertisers and publishers serve and manage ads across the web. We may set one or more cookies in your browser when you visit a website, including NGM sites that use our advertising cookies, and view or click on an ad supported by NGM's advertising services.</p>
 <p> Log information - When you access NGM services, our servers automatically record information that your browser sends whenever you visit a website. These server logs may include information such as your web request, Internet address, browser type, browser language, the date and time of your request with one or more cookies that may uniquely identify your browser.</p>
@@ -50,8 +49,7 @@
 <p>Location data - NGM offers location-enabled services, and NGM may receive information about your actual location.</p>
 <p>Links - NGM may present links in a format that enables us to keep track of whether these links have been followed. We use this information to improve the quality of our search technology, customized content and advertising.</p>
 <p>Other sites - This Privacy Policy applies to NGM services only. We do not exercise control over other site's or their respective links not owned by NGM from within our various services. These other sites may place their own cookies or other files on your computer, collect data or solicit personal information from you, which you accept full responsibility for using.</p>
-<p>NGM only processes personal information for the purposes described in this Privacy Policy and not limited to but including for the following purposes: Providing our services, including the display of customized content and advertising; Auditing, research and analysis in order to maintain, protect and improve our services; Ensuring the technical functioning of our network; Protecting the rights or property of NGM or our users; and Developing new services.</p>
-<p>Our privacy policy may be changed at anytime with no notice to you please check it daily for any changes.<br>
+<p>NGM only processes personal information for the purposes described in this Privacy Policy and not limited to but including for the following purposes: Providing our services, including the display of customized content and advertising; Auditing, research and analysis in order to maintain, protect and improve our services; Ensuring the technical functioning of our network; Protecting the rights or property of NGM or our users; and Developing new services.<br>
 </p></div>
 </div>
 
