--- a/s/sp/spe/spellzone.com.html
+++ b/s/sp/spe/spellzone.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the spellzone.com privacy policy that was archived on 2013-09-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130905014700id_/http%3A//www.spellzone.com/pages/privacy-policy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the spellzone.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214115509id_/http%3A//www.spellzone.com/pages/privacy-policy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/pre_login.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -8,6 +8,9 @@
 <title>Spellzone, Privacy Policy</title>
 <!-- #EndEditable -->
 <link rel="stylesheet" href="../stylesheets/index.css" media="screen" type="text/css">
+<meta name="viewport" content="width=device-width">
+<link href="../stylesheets/tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-device-width: 600px) and (max-width: 900px)">
+<link href="../stylesheets/mobile.css" rel="stylesheet" type="text/css" media="only screen and (min-device-width: 0px) and (max-width: 600px)">
 <link rel="stylesheet" href="../stylesheets/style.cfm" media="screen" type="text/css">
 <link href="../stylesheets/print.css" rel="stylesheet" media="print" type="text/css">
 <script type="text/javascript" src="../Scripts/general.js"></script>
@@ -16,6 +19,7 @@
 <div id="top">
 <div id="topbar">
 <div id="logo"><a href="http://www.spellzone.com/"><img src="../images/spellzone-logo2013.jpg" alt="Spellzone - the online English spelling course" width="260" height="80" border="0"></a></div>
+<div id="mobilelogo"><a href="http://www.spellzone.com/"><img src="../images/logos/spellzone-mobilelogo2013.jpg" alt="Spellzone - English spelling course" width="160" height="49" border="0"></a></div>
 <div id="menutop"><div id="login"><a href="../login/login.cfm">Log in</a></div><div id="signup"><a href="register.cfm">Sign up</a></div></div>
 <div id="menu">
 <a href="../learn-spelling.cfm" id="nav2">Learn Spelling</a><a href="../teach-spelling.cfm" id="nav3">Teach Spelling</a><a href="contents.cfm" id="nav7">Spelling Course</a><a href="../word_lists/index.cfm" id="nav9">Word Lists</a><a href="../games/index.cfm" id="nav10">Games</a><a href="contact.cfm" id="nav11">Contact</a><a href="../stylesheets/accessibility.cfm?access=1" id="nav12">Accessibility</a></div>
@@ -90,9 +94,9 @@ United Kingdom<br>
 <em>Company Reg. No. 6884807 Registered in England and Wales</em></p>
 <p><strong>Thank you for visiting the Spellzone website.</strong></p>
 <!-- #EndEditable -->
-<p></p><div style="float:right; padding-left:10px;"> <a href="javascript:window.print()"><img src="../images/2013/print.png" alt="Print this page" border="0" title="Print this page"></a> </div>
+</div><div id="social"><div style="float:right; padding-left:10px;"> <a href="javascript:window.print()"><img src="../images/2013/print.png" alt="Print this page" border="0" title="Print this page"></a> </div>
 <!-- AddThis Button BEGIN -->
-<div class="addthis_toolbox addthis_default_style" style="float:right;">
+<div class="addthis_toolbox addthis_default_style" style="float:right;width:400px;">
 <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
 <a class="addthis_button_tweet"></a>
 <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
@@ -101,8 +105,7 @@ United Kingdom<br>
 <div style="float:right; padding-right:10px; color:#999;">share this page: </div>
 <script type="text/javascript">var addthis_config = {"data_track_addressbar":false};</script>
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=spellzone"></script>
-<!-- AddThis Button END --><p></p>
-</div></div>
+<!-- AddThis Button END --></div></div>
 <div id="hcolumn2"><!-- #BeginEditable "topright" --><!-- #EndEditable --><div id="mainside1">
 <h3>Quick guide to Spellzone</h3>
 <a href="../quick-guide-to-spellzone.cfm"><img src="../images/buttons/quick_guide.png" alt="Quick guide to Spellzone" width="167" height="31" border="0"></a><br><br>
@@ -111,12 +114,13 @@ United Kingdom<br>
 <h3>Sign up today!</h3>
 <a href="register.cfm"><img src="../images/buttons/sign_up_today.png" alt="Sign up today" width="167" height="31" border="0"></a><br><br>
 <!-- #BeginEditable "sidecolumn" -->
-<!-- #EndEditable --></div></div></div>
+<!-- #EndEditable --></div></div>
 <div id="bottomgreen">
 <div id="bottomgreeninner">
 <div id="bgreen1"><h3>Learn to spell...</h3>
 <hr>
 <ul>
+<li><a href="register.cfm">How much does Spellzone cost?</a></li>
 <li><a href="about_spellzone.cfm">How can Spellzone help YOU?</a></li>
 <li><a href="british-american.cfm">Spellzone covers both British and American spelling</a></li>
 </ul>
@@ -139,7 +143,7 @@ United Kingdom<br>
 <p></p>
 </div>
 </div>
-
+</div>
 <div id="footer">
 <div id="footerinner">
 <div id="footer1">
@@ -147,7 +151,7 @@ United Kingdom<br>
 Company Reg No. 6884807</p>
 </div>
 <div id="footer2">
-<p><a href="terms.cfm">Terms &amp; Conditions</a> | <a href="privacy-policy.cfm">Privacy Policy</a> | <a href="cookie-policy.cfm">Cookie Policy</a></p>
+<p><a href="terms.cfm">Terms &amp; Conditions</a> | <a href="privacy-policy.cfm">Privacy Policy</a> | <a href="cookie-policy.cfm">Cookie Policy</a><a href="contact.cfm" id="navfoot1"> | Contact</a><a href="../stylesheets/accessibility.cfm?access=1" id="navfoot2"> | Accessibility</a></p>
 </div>
 <div id="footer3">
 <p align="center">Connect with us at: <a href="https://www.facebook.com/Spellzone" target="_blank" rel="nofollow" onmouseover="MM_swapImage('Facebook','','../images/social-media/round-colour/Facebook.png',1)" onmouseout="MM_swapImgRestore()"><img src="../images/social-media/round-grey/Facebook.png" alt="Facebook" name="Facebook" width="33" height="32" border="0" align="absmiddle" id="Facebook"></a> <a href="https://twitter.com/spellzone" target="_blank" rel="nofollow" onmouseover="MM_swapImage('Twitter','','../images/social-media/round-colour/Twitter.png',1)" onmouseout="MM_swapImgRestore()"><img src="../images/social-media/round-grey/Twitter.png" alt="Twitter" name="Twitter" width="33" height="33" border="0" align="absmiddle" id="Twitter"></a> <a href="https://plus.google.com/u/0/104110783568888582361/posts" target="_blank" rel="nofollow" onmouseover="MM_swapImage('Google+','','../images/social-media/round-colour/Google+.png',1)" onmouseout="MM_swapImgRestore()"><img src="../images/social-media/round-grey/Google+.png" alt="Google+" name="Google+" width="33" height="32" border="0" align="absmiddle" id="Google+"></a> <a href="http://www.youtube.com/user/SpellzoneVideo" target="_blank" rel="nofollow" onmouseover="MM_swapImage('YouTube','','../images/social-media/round-colour/YouTube.png',1)" onmouseout="MM_swapImgRestore()"><img src="../images/social-media/round-grey/YouTube.png" alt="YouTube" name="YouTube" width="33" height="32" border="0" align="absmiddle" id="YouTube"></a></p>
