--- a/c/cl/clu/clubofporno.com.html
+++ b/c/cl/clu/clubofporno.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the clubofporno.com privacy policy that was archived on 2013-08-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130818185621id_/http%3A//www.clubofporno.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the clubofporno.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214120536id_/http%3A//www.clubofporno.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 		<meta charset="utf-8">
@@ -43,7 +43,7 @@
 		<meta name="description" content="Daily updated free porn tube full of exclusive sex pictures in many categories. Watch unlimited porno and enjoy biggest HD porn pics database on the internet.">
 		<meta name="keywords" content="free porn pictures, free sex pics, porn tube, porno tube, sex tube, free online porn, nude tube, xxx tube, tube, free porn tube, hq tube">
 		<title>Free Porno Pics, HD Sex Tube, Online XXX Images, Streaming Porn and Free XXX Pictures</title>
-				<link href="/css/style.275.css" rel="stylesheet" type="text/css">
+				<link href="/css/style.508.css" rel="stylesheet" type="text/css">
 		<link rel="canonical" href="http://www.clubofporno.com/privacy.html">
 	
 		<script type="text/javascript">
@@ -63,13 +63,8 @@
 	
 	</head>
 	<body>
-					<script type="text/javascript">
-			(function() { 
-				window.lek = false;
-			})();
-		</script>
-		<script src="/js/ppu.417.js" type="text/javascript"></script>
-		
+					<script src="/js/pops2.662.js" type="text/javascript"></script>
+				
 		<div class="wrap">
 			<div class="header">
 				<div class="inner">
@@ -171,8 +166,8 @@
 		</div>
 		<div class="footer">
 		<style>
-		.friends {width: 950px; margin: 20px auto 0px; clear: both; height: 35px; font-size: 13px;}
-		.friends div {width: 170px; float: left; border-bottom: 1px dotted #bebebe; margin: 0px 9px; line-height: 27px;}
+		.friends {width: 960px; margin: 20px auto 0px; clear: both; height: 35px; font-size: 13px;}
+		.friends div {width: 140px; float: left; border-bottom: 1px dotted #bebebe; margin: 0px 9px; line-height: 27px;}
 		</style>
 		<div class="friends">
 			<div><a href="http://www.fuckbook.co.uk" title="Fuckbook" target="_blank">Fuckbook</a></div>
@@ -180,9 +175,10 @@
 			<div><a href="http://www.bbwcamgirls.com" title="Live BBW" target="_blank">Live BBW</a></div>
 			<div><a href="http://www.sexchatcity.com" title="Sex Chat Room" target="_blank">Sex Chat Room</a></div>
 			<div><a href="http://www.fuckbook.es" title="Contactos Sexo" target="_blank">Contactos Sexo</a></div>
+			<div><a href="http://www.fapxxx.com" title="XXX Videos" target="_blank">XXX Videos</a></div>
 		</div>
 			<div class="inner">
-				<p>All rights reserved © 2013, Clubofporno.com</p>
+				<p>All rights reserved © 2014, Clubofporno.com</p>
 				<ul>
 					<li><a href="/terms.html" rel="nofollow" target="_blank" title="View our Terms of Use">Terms of Use</a></li>
 					<li><a href="/privacy.html" rel="nofollow" target="_blank" title="View our Privacy Policy">Privacy Policy</a></li>
