--- a/t/tr/tra/travelonly.com.html
+++ b/t/tr/tra/travelonly.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the travelonly.com privacy policy that was archived on 2013-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222205400id_/http%3A//www.travelonly.com/en/c/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the travelonly.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214122002id_/http%3A//www.travelonly.com/en/c/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><!-- layout-default - START --><head>
         <!-- head-default START -->
@@ -258,8 +258,7 @@ We collect personally identifiable information, like names, postal addresses, em
                                         <li><a href="http://www.travelonly.com/fr/" target="_top" title="French speaking travelors visit our french site">Français</a>
                     </li><li><a href="http://www.travelonly.com/en/c/privacy">Privacy Policy</a></li>
                     <li><a href="http://www.travelonly.com/en/c/terms">Terms of Use</a></li>
-                    <li><a href="http://www.travelonly.com/en/c/sitemap">Site Map</a></li>
-                </ul>
+                                        <li><a href="http://www.travelonly.com/en/c/sitemap">Site Map</a></li>                </ul>
             </div>
         </div>
         <div class="subcategory-container">
